--- a/style.css
+++ b/style.css
@@ -320,6 +320,20 @@ pre {
 	padding: 0.8em;
 }
 
+kbd {
+	display: inline-block;
+    padding: 3px 5px;
+    font-size: 14px;
+    line-height: 16px;
+    color: #444d56;
+    vertical-align: middle;
+    background-color: #fafbfc;
+    border: solid 1px #c6cbd1;
+    border-bottom-color: #959da5;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #959da5;
+}
+
 abbr[title] {
 	border-bottom: 1px dotted #eaeaea;
 	border-bottom: 1px dotted rgba(51, 51, 51, 0.1);
